# powers

./: README.md
agentcore-browser/: POWER.md  mcp.json
agentcore-browser-mcp-server/: .gitignore  DESIGN.md  INSTALL.md  POWER_README.md  README.md  agentcore_browser_mcp.py  example_usage.md  install.sh  pyproject.toml  requirements.txt  test_mcp_server.py
agentcore-browser/steering/: getting-started.md  session-management.md  troubleshooting.md
aws-healthomics/: POWER.md
aws-healthomics/steering/: git-integration.md
aws-infrastructure-as-code/: POWER.md
convert-skills-to-power/: POWER.md  README.md
convert-skills-to-power/steering/: installation-migration.md  quick-start.md  script-conversion.md  troubleshooting.md
kiro-arm-soc-migration-power/: POWER.md
legacy-app-modernization-analyzer/: POWER.md  README.md  mcp.json
legacy-app-modernization-analyzer/steering/: aws-target-services.md  cobol-to-java.md  dotnet-to-aws.md  evaluation-framework.md  j2ee-to-springboot-reactive.md  report-structure.md  weblogic-to-springboot.md  websphere-to-springboot.md
pptx-mcp-server/: README.md  install-pptx-mcp-server.sh  package.json  requirements.txt  script_executor_mcp.py  test_mcp_server.py
pptx-mcp-server/scripts/: html2pptx-cli.js
pptx-power-clean/: POWER.md  README.md  mcp.json
pptx-power-clean/examples/: README.md
pptx-power-clean/steering/: html2pptx-guide.md  ooxml-guide.md  template-workflow.md  user-request-to-html.md
spec-kit/: POWER.md
spec-kit/steering/: 02-specify-workflow.md  03-clarify-workflow.md
terraform/: POWER.md
