[project]
name = "agentcore-browser-mcp-server"
version = "0.1.0"
description = "MCP server for AWS Bedrock AgentCore Browser automation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "playwright>=1.40.0",
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
agentcore-browser-mcp-server = "agentcore_browser_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
